--- a/styles.css
+++ b/styles.css
@@ -1,14 +1,48 @@
+body {
+    background-color: lightblue;
+    font-family: cursive;
+}
+
 #cs1300-gallery {
   background-color: lightblue;
+}
+
+#cs1300-gallery h1,p {
+    text-align: center;
 }
 
 /* Uncomment below if images are way too big.
 Selects all image tags and makes them 500px;
  */
-/*img {*/
-/*  width: 500px;*/
-/*}*/
+img {
+  width: 500px;
+    height: fit-content;
+    margin-top: 20px;
+    border: black 2px dotted;
+}
+
+img:hover {
+    border: black 2px solid;
+}
 
 .gallery-container {
+    /*height: 200vh;*/
   /* TODO add styles (hint: use flex!) https://www.w3schools.com/cssref/ */
+    display: flex;
+    /*flex-flow: wrap column;*/
+    flex-wrap: wrap;
+    justify-content: space-around;
+    align-content: space-around;
+    align-items: flex-start;
+
+
+}
+
+.gallery-item {
+    /*align-self: center;*/
+}
+
+.button-centered {
+    text-align: center;
+
 }
